Right align numbers and style fixes for printing batch edit.

--- a/app/assets/stylesheets/partials/content/_edit_report.sass
+++ b/app/assets/stylesheets/partials/content/_edit_report.sass
@@ -2,6 +2,9 @@
   td
     padding:   2px
     font-size: 12px
+  td input.number
+    text-align: right
+    width: 85%
   th.year
     padding: 6px 0px
     select
