--- a/app/assets/stylesheets/partials/print/_batch_year_edit.sass
+++ b/app/assets/stylesheets/partials/print/_batch_year_edit.sass
@@ -17,3 +17,9 @@
     background: none
   thead
     display: table-header-group
+
+  select.dossier_numbers_year
+    background: transparent
+    border:     none
+    font-size:  12px
+    text-align: right
